kubernetes/home.vijayakumar.xyz/media/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
    app.kubernetes.io/instance: jellyfin
    app.kubernetes.io/name: jellyfin
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
        - image: jellyfin/jellyfin:10.10.3
          imagePullPolicy: IfNotPresent
          name: jellyfin
          # requesting 1 GPU
          resources:
            limits:
              gpu.intel.com/i915: '1'
          ports:
            - containerPort: 8096
              name: web
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: jellyfin
              subPath: config
            - mountPath: /cache
              name: jellyfin
              subPath: cache
            - mountPath: /data/audiobooks
              readOnly: false
              name: nfs
              subPath: downloads/audiobooks
            - mountPath: /data/movies
              readOnly: false
              name: nfs
              subPath: downloads/movies
            - mountPath: /data/tvshows
              readOnly: false
              name: nfs
              subPath: downloads/shows
            - mountPath: /data/music
              readOnly: false
              name: nfs
              subPath: downloads/music
      volumes:
        - name: jellyfin
          persistentVolumeClaim:
            claimName: jellyfin-pvc
        - name: nfs
          persistentVolumeClaim:
            claimName: media-share-pvc
