kubernetes/home.vijayakumar.xyz/media/jellyfin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: media
spec:
  ports:
    - name: web-tcp
      port: 8096
      protocol: TCP
      targetPort: 8096
    - name: web-udp
      port: 8096
      protocol: UDP
      targetPort: 8096
  selector:
    app: jellyfin
  type: ClusterIP
  clusterIP: 10.43.157.190
