kubernetes/home.vijayakumar.xyz/media/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`jellyfin.home.vijayakumar.xyz`)
      kind: Rule
      services:
        - name: jellyfin
          port: 8096
      middlewares:
        - name: default-headers
  tls:
    secretName: home-vijayakumar-xyz
